# DEZoomcamp

./: .gitignore
01-docker-terraform/: README.md  docker-compose.yaml  ingest_data.py  pyproject.toml  queries.md  requirements.txt  test_data.ipynb  test_data.py
01-docker-terraform/.ipynb_checkpoints/: test_data-checkpoint.ipynb
02-workflow-orchestration/: .gitignore  11_chat_with_rag.yaml  GCP_KV_setup.yaml  GCP_KV_test.yaml  GCP_taxi.yaml  GCP_taxi_scheduled.yaml  docker-compose.yml  homework-02.yaml  my_data_ai_flow.yaml
03-data-warehouse/: .gitignore  answers.sql  load_yellow_taxi_data.py
04-analytics-engineering/: .gitignore  changes_made.md  dbt_project.yml  load_data.sql  load_taxi_data.py
04-analytics-engineering/analyses/: Q4.sql  Q5.sql  Q6.sql  README.md  stg_fhv_tripdata.sql
04-analytics-engineering/homework/: Q3.sql
04-analytics-engineering/models/staging/: Q3.sql  sources.yml  stg_fhv_tripdata.sql
